2010-03-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs : Added test for bug #574696	
	Patch by Eberhard Beilharz <eb1@sil.org>

2010-03-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Tests for new v4 overloads of GetType.

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* LazyTest.cs: Add tests for lazy modes.

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Test new v4 IsEnumDefined ().

2010-02-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Test new v4 GetEnumValue ().

2010-02-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Test new v4 GetEnumValues ().

2010-02-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Test new v4 GetEnumNames ().

2010-02-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs:  Test new v4 GetEnumUnderlyingType ().

2010-02-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Test new v4 behavior for Equals.

2010-01-29  Zoltan Varga  <vargaz@gmail.com>

	* Int32Test.cs: Fix a copy-paste error.

2010-01-29  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add a test for #574819.

2010-01-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* VersionTest.cs: New tests for Parse and TryParse.

2010-01-27  Zoltan Varga  <vargaz@gmail.com>

	* ValueTypeTest.cs: Add a test for Equals () + nullables.

2010-01-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* EnumTest.cs: New tests for the new TryParse method.

2010-01-25  Zoltan Varga  <vargaz@gmail.com>

	* ArrayTest.cs: Add a test for SetValue () + nullables.

2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* SingleTest.cs : test for parsing MaxValue and PositiveInfinity.
	  Patch by Tiaan Geldenhuys.

2010-01-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Add test for GetGenericMethodDefinition of inflated
	generic methods on a GTD.

2010-01-15  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : commented out ParseExact() case that tests
	  preserved fraction.
