@@ -1,3 +1,7 @@
+2010-03-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* TimeSpanTest.cs: 'Port' our Parse assertions to also use TryParse.
+
 2010-03-03 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* TypeTest.cs : Added test for bug #574696	
